Rewrite abstract dao tests